--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -3,7 +3,7 @@
 
 .ad-footer-contents {
   width: 100vw;
-  background-image: image-url('IMG_0582.jpeg');
+  background-image: image-url('furima-footer.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
