--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,13 +4,13 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      人生を変える予約管理アプリ
+      人生を変えるフリマアプリ
     </h2>
     <p class='service-explain'>
-      YOYAKUはだれでもかんたんに出店・予約できる
+      FURIMAはだれでもかんたんに出品・購入できる
     </p>
     <p class='service-explain'>
-      予約管理アプリです
+      フリマアプリです
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -22,40 +22,40 @@
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
-      YOYAKUが選ばれる3つの理由
+      FURIMAが選ばれる3つの理由
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
-        <%= image_tag 'IMG_0584.JPG' , size: '200x200' ,class: "list-pict" %>
+        <%= image_tag "furima-intro01.png", class:"list-pict" %>
         <span class='reason-list-number'>1</span>
         <h3 class='reason-list-text'>
           <span class='reason-list-blue-text'>3分</span>
-          ですぐに予約
+          ですぐに出品
         </h3>
         <p class='reason-list-description'>
-          スマホで入力するだけで簡単に予約できる！
+          スマホで入力するだけで簡単に出品できる！
         </p>
       </li>
       <li class='list'>
-        <%= image_tag 'IMG_0583.JPG' , size: '200x200' ,class: "list-pict" %>
+        <%= image_tag "furima-intro02.png", class:"list-pict" %>
         <span class='reason-list-number'>2</span>
         <h3 class='reason-list-text'>
-          <span class='reason-list-blue-text'>簡単</span>
+          <span class='reason-list-blue-text'>シンプル</span>
           で使いやすい
         </h3>
         <p class='reason-list-description'>
-          めんどくさい入力は必要なく、予約、出店もスムーズ！
+          めんどくさい入力は必要なく、検索も購入もスムーズ！
         </p>
       </li>
       <li class='list'>
-        <%= image_tag 'IMG_0585.JPG' , size: '200x200' ,class: "list-pict" %>
+        <%= image_tag "furima-intro03.png", class:"list-pict" %>
         <span class='reason-list-number'>3</span>
         <h3 class='reason-list-text'>
-          充実！
-          <span class='reason-list-blue-text'>ポイントでお得に利用</span>
+          手数料
+          <span class='reason-list-blue-text'>業界最安</span>
         </h3>
         <p class='reason-list-description'>
-          最大30%offでお得にお食事が楽しめる！
+          10%でお得に出品&購入！
         </p>
       </li>
     </ul>
@@ -68,13 +68,13 @@
       会員数日本一位
     </h2>
     <p class='ad-explain'>
-      YOYAKUは、予約管理アプリで最も人気。
+      FURIMAは、フリマアプリで最も人気。
     </p>
     <p class='ad-explain'>
-      出店数・予約数も業界最多です！
+      出品・購入回数も業界最多です！
     </p>
     <p class='ad-explain'>
-      なかなか予約の取れないあのお店を利用できるかも
+      ほしかったあの商品に出会えるかもしれません。
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -86,34 +86,34 @@
   <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
-      YOYAKUの特徴
+      FURIMAの特徴
     </h2>
     <ul class='feature-lists'>
       <li class='list'>
         <%= image_tag "furima-intro04.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          すぐ見つかる！
+          簡単に売り買いできる
         </h3>
         <p class='feature-list-description'>
-          簡単操作で最速予約可能！
+          スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro05.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          電話要らず！
+          売上金は即日振込みに対応
         </h3>
         <p class='feature-list-description'>
-          場所を選ばず柔軟に予約ができます！
+          午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします。
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro06.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          ポイント還元！
+          様々な支払いに対応
         </h3>
         <p class='feature-list-description'>
-          利用すればするほどお得にご利用できます！
+          お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
         </p>
       </li>
     </ul>
@@ -122,42 +122,39 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
-    <h2 class='title'>注目のお店</h2>
-    <%= link_to '新規投稿店舗', new_item_path, class: "subtitle" %>
+    <h2 class='title'>ピックアップカテゴリー</h2>
+    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
-      <% if @items.length != 0 %>
+
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <% @items.each do |item|%>
       <li class='list'>
-        <%= link_to item_path(item) do %>
+        <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag item.image,class: "item-img" %>
+          <%= image_tag "item-sample.png", class: "item-img" %>
+
           <%# 商品が売れていればsold outを表示しましょう %>
-          <% if item.item_purchase.present? %>
           <div class='sold-out'>
-            <span>予約で一杯です!!</span>
+            <span>Sold Out!!</span>
           </div>
-          <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
-        
+
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= item.name %>
+            <%= "商品名" %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price %>円<br>(税込み)</span>
+            <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
-          <% end %>
         <% end %>
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <% else %>
+
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
@@ -178,17 +175,13 @@
         <% end %>
       </li>
       <%# //商品がある場合は表示されないようにしましょう %>
-      <% end %>
       <%# /商品がない場合のダミー %>
     </ul>
   </div>
   <%# /商品一覧 %>
 </div>
-<div class='purchase-btn'>
-  <span class='purchase-btn-text'>出店する</span>
-  <%# <%=form_with model: @item, local: true do |f|%> 
-  <a href="/items/new">
-    <%= image_tag 'IMG_0581.jpeg' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
-</div>
+<%= link_to('#', class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
 <%= render "shared/footer" %>
