--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,73 +4,66 @@
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
-      <%= @item.name %>
+      <%= "商品名" %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag @item.image ,class:"item-box-img" %>
+      <%= image_tag "item-sample.png" ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <div class='sold-out'>
-      <% if @item.item_purchase.present? %>
         <span>Sold Out!!</span>
-      <% end %>
       </div>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        <%= @item.price %>円
+        ¥ 999,999,999
       </span>
       <span class="item-postage">
-        (税込) 送料込み
+        <%= '配送料負担' %>
       </span>
     </div>
 
     <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-    <% if user_signed_in? && current_user.id == @item.user_id %>
-    <%= link_to '店舗の編集',  edit_item_path, method: :get, class: "item-red-btn" %>
+
+    <%= link_to '商品の編集', "#", method: :get, class: "item-red-btn" %>
     <p class='or-text'>or</p>
-    <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>
-    <% else %>
+    <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
+
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <% if user_signed_in? %>
-    <% if @item.item_purchase.present? %>
-    <% else %>
-    <%= link_to '予約画面に進む',item_orders_path(@item.id),class:"item-red-btn"%>
-    <% end %>
+    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-    <% end %>
-    
+
 
     <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-    <% end %>
+
     <div class="item-explain-box">
-      <span><%= @item.info %></span>
+      <span><%= "商品説明" %></span>
     </div>
     <table class="detail-table">
       <tbody>
         <tr>
-          <th class="detail-item">店舗名</th>
-          <td class="detail-value"><%= @item.name %></td>
+          <th class="detail-item">出品者</th>
+          <td class="detail-value"><%= "出品者名" %></td>
         </tr>
         <tr>
-          <th class="detail-item">店舗形態</th>
-          <td class="detail-value"><%= @item.category.name %></td>
+          <th class="detail-item">カテゴリー</th>
+          <td class="detail-value"><%= "カテゴリー名" %></td>
         </tr>
         <tr>
-          <th class="detail-item">予約最大人数</th>
-          <td class="detail-value"><%= @item.sales_status.name %></td>
+          <th class="detail-item">商品の状態</th>
+          <td class="detail-value"><%= "商品の状態" %></td>
         </tr>
         <tr>
-          <th class="detail-item">最寄駅</th>
-          <td class="detail-value"><%= @item.shipping_fee_status.name%></td>
+          <th class="detail-item">配送料の負担</th>
+          <td class="detail-value"><%= "発送料の負担" %></td>
         </tr>
         <tr>
-          <th class="detail-item">営業時間</th>
-          <td class="detail-value"><%= @item.prefecture.name%></td>
+          <th class="detail-item">発送元の地域</th>
+          <td class="detail-value"><%= "発送元の地域" %></td>
         </tr>
         <tr>
-          <th class="detail-item">店舗の特徴</th>
-          <td class="detail-value"><%= @item.scheduled_delivery.name %></td>
+          <th class="detail-item">発送日の目安</th>
+          <td class="detail-value"><%= "発送日の目安" %></td>
         </tr>
       </tbody>
     </table>
@@ -109,7 +102,7 @@
       後ろの商品 ＞
     </a>
   </div>
-  <a href="#" class='another-item'><%= @item.category.name %>をもっと見る</a>
+  <a href="#" class='another-item'><%= "商品のカテゴリー名" %>をもっと見る</a>
 </div>
 
 <%= render "shared/footer" %>
