--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,29 +1,26 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("IMG_0581.jpeg", class:"furima-icon"), "/" %>
+    <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
     <form class="search-form" action="#">
-      <input class='input-box' placeholder='お探しの店舗はこちらから'>
+      <input class='input-box' placeholder='キーワードから探す'>
       <button class="search-button">
         <%= image_tag "search.png", class:"search-icon" %>
       </button>
     </form>
-
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to '新店舗について', "#", class: "category-list" %></li>
-      <li><%= link_to '注目の店舗', "#", class: "brand-list" %></li>
+      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
+      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
-      <% if user_signed_in? %>
-       <li><%= link_to current_user.nickname, "#" ,class: "user-nickname"%> </li>
-       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li> 
-       </div>
-      <% else %>
-      <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
-      <%end%>
+      <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
+      <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
+      <%# <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" </li> %>
+      <li><%= link_to 'ログイン', "#", class: "login" %></li>
+      <li><%= link_to '新規登録', "#", class: "sign-up" %></li>
+      <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
     </ul>
   </div>
 </header>
