--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,12 +7,12 @@
       <%= @item.name %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag "item-sample.png" ,class:"item-box-img" %>
+      <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <div class='sold-out'>
-      <%# if @item.item_purchase.present? %>
+      <% if @item.item_purchase.present? %>
         <span>Sold Out!!</span>
-      <%# end %>
+      <% end %>
       </div>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
@@ -33,12 +33,12 @@
     <% else %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% if user_signed_in? %>
-    <%# if @item.item_purchase.present? %>
+    <% if @item.item_purchase.present? %>
     <% else %>
     <%= link_to '購入画面に進む',item_orders_path(@item.id),class:"item-red-btn"%>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-    <%# end %>
+    <% end %>
 
 
     <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
