--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,18 +3,18 @@
 <div class='transaction-contents'>
   <div class='transaction-main'>
     <h1 class='transaction-title-text'>
-      購入内容の確認
+      店舗情報の確認
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag "item-sample.png", class: 'buy-item-img' %>
+      <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
-        <h2 class='buy-item-text'>
-          <%= "商品名" %>
-        </h2>
+        <h1 class='buy-item-text'>
+          <%= @item.name %>
+        </h1>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= 999,999,999 %></p>
-          <p class='item-price-sub-text'><%= '配送料負担' %></p>
+          <p class='item-price-text'><%=@item.eki.name%></p>
+          <p class='item-price-sub-text'>（最寄駅）</p>
         </div>
       </div>
     </div>
@@ -23,106 +23,102 @@
     <%# 支払額の表示 %>
     <div class='item-payment'>
       <h1 class='item-payment-title'>
-        支払金額
+        客単価
       </h1>
       <p class='item-payment-price'>
-        ¥<%= "販売価格" %>
+        約¥<%= @item.price %>
       </p>
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with  url: item_orders_path , id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
-        クレジットカード情報入力
+        『店舗の住所・最寄からのアクセス・その他』
       </h1>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">カード情報</label>
-          <span class="indispensable">必須</span>
+          <label class="form-text"></label>
+          <span class="indispensable">下記を必ずご確認下さい↓</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
+      <p class='info-input-haedline'>
+        <%=@item.info%>
+      </p>
+         <%# 消すとまずいやつ %>
+          <%# 消すとまずいやつ %>
         <div class='available-card'>
-          <%= image_tag 'card-visa.gif', class: 'card-logo'%>
-          <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
-          <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
-          <%= image_tag 'card-amex.gif', class: 'card-logo'%>
         </div>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">有効期限</label>
-          <span class="indispensable">必須</span>
+          <label class="form-text"></label>
+          
         </div>
         <div class='input-expiration-date-wrap'>
-          <%= f.text_area 'hoge', class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
-          <p>月</p>
-          <%= f.text_area 'hoge', class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
-          <p>年</p>
+          <%# 消すとまずいやつ %>
+          <%# 消すとまずいやつ %>
+          <p></p>
+          <%# 消すとまずいやつ %>
+          <%# 消すとまずいやつ %>
+          <p></p>
         </div>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">セキュリティコード</label>
-          <span class="indispensable">必須</span>
+          <label class="form-text"></label>
         </div>
-        <%= f.text_field "hoge",class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+
+
       </div>
     </div>
     <%# /カード情報の入力 %>
     
-    <%# 配送先の入力 %>
+    <%# 予約者の情報記入欄 %>
     <div class='shipping-address-form'>
       <h1 class='info-input-haedline'>
-        配送先入力
+        ご予約者様記入欄
       </h1>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">郵便番号</label>
+          <label class="form-text">予約者様のお名前</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"postal-code", placeholder:"例）123-4567", maxlength:"8" %>
+        <%= f.text_field :name, class:"input-default", id:"postal-code", placeholder:"例）山田太郎", maxlength:"8" %>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">都道府県</label>
+          <label class="form-text">予約者様の電話番号</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.collection_select(:hoge, [], :hoge, :hoge, {}, {class:"select-box", id:"prefecture"}) %>
+        <%= f.text_field :phone_number, class:"input-default", id:"postal-code", placeholder:"例）09012341234", maxlength:"11" %>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">市区町村</label>
+          <label class="form-text">ご予約日時</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"city", placeholder:"例）横浜市緑区"%>
+        <%= f.text_field :day, class:"input-default", id:"city", placeholder:"例）1月1日"%>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">番地</label>
+          <label class="form-text">ご予約時間</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"addresses", placeholder:"例）青山1-1-1"%>
+        <%= f.text_field :time, class:"input-default", id:"addresses", placeholder:"例）19時30分"%>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">建物名</label>
+          <label class="form-text">お連れ様との関係性</label>
           <span class="form-any">任意</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"building", placeholder:"例）柳ビル103"%>
-      </div>
-      <div class="form-group">
-        <div class='form-text-wrap'>
-          <label class="form-text">電話番号</label>
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"phone-number", placeholder:"例）09012345678",maxlength:"11"%>
+        <%= f.text_field :building, class:"input-default", id:"building", placeholder:"例）恋人"%>
       </div>
     </div>
     <%# /配送先の入力 %>
     <div class='buy-btn'>
-      <%= f.submit "購入" ,class:"buy-red-btn" %>
+      <%= f.submit "予約確定",class:"buy-red-btn" %>
     </div>
     <% end %>
   </div>
