見た目の構築

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -49,27 +49,27 @@
     <table class="detail-table">
       <tbody>
         <tr>
-          <th class="detail-item">出品者</th>
+          <th class="detail-item">店舗名</th>
           <td class="detail-value"><%= @item.name %></td>
         </tr>
         <tr>
-          <th class="detail-item">カテゴリー</th>
+          <th class="detail-item">店舗カテゴリー</th>
           <td class="detail-value"><%=  @item.tempo.name %></td>
         </tr>
         <tr>
-          <th class="detail-item">商品の状態</th>
+          <th class="detail-item">営業時間</th>
           <td class="detail-value"><%=  @item.ttime.name %></td>
         </tr>
         <tr>
-          <th class="detail-item">配送料の負担</th>
+          <th class="detail-item">予約最大人数</th>
           <td class="detail-value"><%=  @item.man_kaz.name %></td>
         </tr>
         <tr>
-          <th class="detail-item">発送元の地域</th>
+          <th class="detail-item">店舗の特徴</th>
           <td class="detail-value"><%= @item.tempo_to.name %></td>
         </tr>
         <tr>
-          <th class="detail-item">発送日の目安</th>
+          <th class="detail-item">最寄駅</th>
           <td class="detail-value"><%= @item.eki.name %></td>
         </tr>
       </tbody>
@@ -81,7 +81,7 @@
       </div>
       <div class="report-btn">
         <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
-        <span>不適切な商品の通報</span>
+        <span>不適切な店舗の通報</span>
       </div>
     </div>
   </div>
@@ -91,7 +91,7 @@
     <form>
       <textarea class="comment-text"></textarea>
       <p class="comment-warn">
-        相手のことを考え丁寧なコメントを心がけましょう。
+        ユーザーのことを考え丁寧なコメントを心がけましょう。
         <br>
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
