--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,13 +4,13 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      人生を変えるフリマアプリ
+      人生を変える予約管理アプリ
     </h2>
     <p class='service-explain'>
-      FURIMAはだれでもかんたんに出品・購入できる
+      YOYAKUはだれでもかんたんに出店・予約できる
     </p>
     <p class='service-explain'>
-      フリマアプリです
+      予約管理アプリです
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -22,40 +22,40 @@
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
-      FURIMAが選ばれる3つの理由
+      YOYAKUが選ばれる3つの理由
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
-        <%= image_tag "furima-intro01.png", class:"list-pict" %>
+        <%= image_tag 'IMG_0584.JPG' , size: '200x200' ,class: "list-pict" %>
         <span class='reason-list-number'>1</span>
         <h3 class='reason-list-text'>
           <span class='reason-list-blue-text'>3分</span>
-          ですぐに出品
+          ですぐに予約
         </h3>
         <p class='reason-list-description'>
-          スマホで入力するだけで簡単に出品できる！
+          スマホで入力するだけで簡単に予約できる！
         </p>
       </li>
       <li class='list'>
-        <%= image_tag "furima-intro02.png", class:"list-pict" %>
+        <%= image_tag 'IMG_0583.JPG' , size: '200x200' ,class: "list-pict" %>
         <span class='reason-list-number'>2</span>
         <h3 class='reason-list-text'>
-          <span class='reason-list-blue-text'>シンプル</span>
+          <span class='reason-list-blue-text'>簡単</span>
           で使いやすい
         </h3>
         <p class='reason-list-description'>
-          めんどくさい入力は必要なく、検索も購入もスムーズ！
+          めんどくさい入力は必要なく、予約、出店もスムーズ！
         </p>
       </li>
       <li class='list'>
-        <%= image_tag "furima-intro03.png", class:"list-pict" %>
+        <%= image_tag 'IMG_0585.JPG' , size: '200x200' ,class: "list-pict" %>
         <span class='reason-list-number'>3</span>
         <h3 class='reason-list-text'>
-          手数料
-          <span class='reason-list-blue-text'>業界最安</span>
+          充実！
+          <span class='reason-list-blue-text'>ポイントでお得に利用</span>
         </h3>
         <p class='reason-list-description'>
-          10%でお得に出品&購入！
+          最大30%offでお得にお食事が楽しめる！
         </p>
       </li>
     </ul>
@@ -68,13 +68,13 @@
       会員数日本一位
     </h2>
     <p class='ad-explain'>
-      FURIMAは、フリマアプリで最も人気。
+      YOYAKUは、予約管理アプリで最も人気。
     </p>
     <p class='ad-explain'>
-      出品・購入回数も業界最多です！
+      出店数・予約数も業界最多です！
     </p>
     <p class='ad-explain'>
-      ほしかったあの商品に出会えるかもしれません。
+      なかなか予約の取れないあのお店を利用できる
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -86,34 +86,34 @@
   <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
-      FURIMAの特徴
+      YOYAKUの特徴
     </h2>
     <ul class='feature-lists'>
       <li class='list'>
         <%= image_tag "furima-intro04.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          簡単に売り買いできる
+          すぐ見つかる！
         </h3>
         <p class='feature-list-description'>
-          スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
+          簡単操作で最速予約可能！
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro05.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          売上金は即日振込みに対応
+          電話要らず！
         </h3>
         <p class='feature-list-description'>
-          午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします。
+          場所を選ばず柔軟に予約ができます！
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro06.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          様々な支払いに対応
+          ポイント還元！
         </h3>
         <p class='feature-list-description'>
-          お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
+          利用すればするほどお得にご利用できます！
         </p>
       </li>
     </ul>
@@ -122,7 +122,7 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
-    <h2 class='title'>ピックアップカテゴリー</h2>
+    <h2 class='title'>注目のお店</h2>
     <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
       <% if @items.length != 0 %>
@@ -135,7 +135,7 @@
           <% if item.item_purchase.present? %>
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
-            <span>Sold Out!!</span>
+            <span>予約で一杯です!</span>
           </div>
           <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
@@ -146,7 +146,7 @@
             <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price  %>円<br><%= '配送料負担' %></span>
+            <span><%= item.price  %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -184,13 +184,11 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to('/items/new', class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>出品する</span>
-  <%=form_with model: @item, local: true do |f|%> 
+<div class='purchase-btn'>
+  <span class='purchase-btn-text'>出店する</span>
+  <%# <%=form_with model: @item, local: true do |f|%> 
   <a href="/items/new">
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+    <%= image_tag 'IMG_0581.jpeg' , size: '185x50' ,class: "purchase-btn-icon" %>
   </a>
-  <% end %>
-<% end %>
 </div>
 <%= render "shared/footer" %>
