細かいところの修正

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -87,7 +87,7 @@
     <%# 販売価格 %>
     <div class="sell-price">
       <div class="weight-bold-text question-text">
-        <span>販売価格<br>(¥300〜9,999,999)</span>
+        <span>客単価<br>(¥300〜9,999,999)</span>
         <a class="question" href="#">?</a>
       </div>
       <div>
@@ -124,7 +124,7 @@
       </p>
       <p class="sentence">
         また投稿内容に虚偽があった場合は詐欺罪が成立します。
-        <a href="#">偽ブランドの販売</a>
+        <a href="#">成り済まし行為</a>
         は犯罪であり処罰される可能性があります。
       </p>
       <p class="sentence">
