--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -111,7 +111,7 @@
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">お連れ様との関係性</label>
-          <span class="form-any">任意</span>
+          <span class="form-any">必須</span>
         </div>
         <%= f.text_field :building, class:"input-default", id:"building", placeholder:"例）恋人"%>
       </div>
