--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) 山田太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -54,7 +54,7 @@
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :first_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :last_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+      <%= f.text_area :last_name, class:"input-name", id:"first-name", placeholder:"例) 太郎" %>
     </div>
   </div>
   <div class="form-group">
@@ -64,7 +64,7 @@
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :first_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :last_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <%= f.text_area :last_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) タロウ" %>
     </div>
   </div>
   <div class="form-group">
