--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -123,7 +123,7 @@
   <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>注目のお店</h2>
-    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
+    <%= link_to '新規投稿店舗', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
       <% if @items.length != 0 %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
@@ -165,7 +165,7 @@
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
-            商品を出品してね！
+            ダミー店舗です
           </h3>
           <div class='item-price'>
             <span>99999999円<br>(税込み)</span>
