--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,11 +13,12 @@
     <ul class='lists-left'>
       <% if user_signed_in? %>
       <li><%= link_to 'ツイート一覧', tweets_path, class: "category-list" %></li>
-      <li><%= link_to 'マイページ', user_path(current_user), class: "brand-list" %></li>
+      <li><%= link_to '『マイページ』', user_path(current_user), class: "brand-list" %></li>
+      <li><%= link_to '『トップページに戻る』', root_path, class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
        <li><%= link_to current_user.nickname, "#", class: "user-nickname"%> </li>
-       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li> 
+       <li><%= link_to '『ログアウト』', destroy_user_session_path, method: :delete, class: "logout" %></li> 
        </div>
       <% else %>
       <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
